# kaizen-trader

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Procfile  README.md  package.json  pyproject.toml  railway.toml  requirements.txt  tsconfig.json  watchdog.py
convex/: aggregations.ts  crons.ts  mutations.ts  package-lock.json  package.json  queries.ts  schema.ts  tsconfig.json
deploy/: kaizen-watchdog.service  kaizen.service  setup_service.sh
docs/: PARALLEL_TRADER_INSIGHTS.md  PLAN_funding_neutral_spot_leg.md  RALPH_LOOP.md  RESEARCH_competitive_benchmark_2026-06-23.md  architecture.md  live-trading-session-2026-04-14.md  setup.md
scripts/: analyze-logs.ts  analyze_logs.py  backtest.py  collect_liquidations.py  collect_mempool.py  fast_cut_counterfactual.py  kaizen-liveness-check.sh  listing_pump_optimize.py  measure_cross_spread.py  performance.py  performance.ts  ralph_loop_prompt.txt  run_live_backtest.py  send-alert.py  systematic_backtest.py  validate_strategy.py  walk_forward_carry.py
src/: config.py  config.ts  index.ts  main.py  types.py  types.ts
tests/: conftest.py  test_backtesting.py  test_batch2_features.py  test_batch3_features.py  test_blind_spots.py  test_chain_tvl_loader.py  test_convex_client.py  test_cross_exchange.py  test_cvd.py  test_database.py  test_delta_evaluator.py  test_edge_sizing.py  test_execution_layer.py  test_executor_exits.py  test_funding_direction.py  test_funding_neutral.py  test_gap_fixes.py  test_github_issues.py  test_healer.py  test_indicators_core.py  test_liquidation_loader.py  test_metrics.py  (+22 more)
(+133 files in other folders)
